Implement kernel feature source
This implementation only detects kconfig flags ("NO_HZ", "NO_HZ_IDLE",
"NO_HZ_FULL" and "PREEMPT"). The related node flags will be
  node.alpha.kubernetes-incubator.io/nfd-kernel-config-<NAME>

Currently, only bool and tristate (i.e. '=y' or '=m') kernel config
options are supported. Other kconfig types (e.g. string or int) are
simply ignored. If the kconfig flag is set to '=y' or '=m', the
corresponding k8s node label will be true.

--- a/node-feature-discovery-job.json.template
+++ b/node-feature-discovery-job.json.template
@@ -42,6 +42,11 @@
             ],
             "volumeMounts": [
               {
+                "name": "host-boot",
+                "mountPath": "/boot",
+                "readOnly": true
+              },
+              {
                 "name": "host-sys",
                 "mountPath": "/host-sys"
               }
@@ -50,6 +55,12 @@
         ],
         "restartPolicy": "Never",
         "volumes": [
+          {
+            "name": "host-boot",
+            "hostPath": {
+              "path": "/boot"
+            }
+          },
           {
             "name": "host-sys",
             "hostPath": {
