--- a/node-feature-discovery-daemonset.json.template
+++ b/node-feature-discovery-daemonset.json.template
@@ -39,6 +39,11 @@
             "args": ["--sleep-interval=60s"],
             "volumeMounts": [
               {
+                "name": "host-boot",
+                "mountPath": "/boot",
+                "readOnly": true
+              },
+              {
                 "name": "host-sys",
                 "mountPath": "/host-sys"
               }
@@ -46,6 +51,12 @@
           }
         ],
         "volumes": [
+          {
+            "name": "host-boot",
+            "hostPath": {
+              "path": "/boot"
+            }
+          },
           {
             "name": "host-sys",
             "hostPath": {
