Implement OS release detection
Implement new 'os-release' feature source which detects OS release
information from the /etc/os-release file. It currently creates two
labels (assuming that the corresponding fields are found in the
os-release file), with example values:
  node.alpha.kubernetes-incubator.io/nfd-os-release-ID=opensuse
  node.alpha.kubernetes-incubator.io/nfd-os-release-VERSION_ID=42.3

Also, update the template spec to mount /etc/os-release file from the
host inside the container.

--- a/node-feature-discovery-daemonset.json.template
+++ b/node-feature-discovery-daemonset.json.template
@@ -46,6 +46,11 @@
               {
                 "name": "host-sys",
                 "mountPath": "/host-sys"
+              },
+              {
+                "name": "host-os-release",
+                "mountPath": "/etc/os-release",
+                "readOnly": true
               }
             ]
           }
@@ -61,6 +66,12 @@
             "name": "host-sys",
             "hostPath": {
               "path": "/sys"
+            }
+          },
+          {
+            "name": "host-os-release",
+            "hostPath": {
+              "path": "/etc/os-release"
             }
           }
         ]
