--- a/node-feature-discovery-job.json.template
+++ b/node-feature-discovery-job.json.template
@@ -49,7 +49,13 @@
               {
                 "name": "host-sys",
                 "mountPath": "/host-sys"
+              },
+              {
+                "name": "host-os-release",
+                "mountPath": "/etc/os-release",
+                "readOnly": true
               }
+
             ]
           }
         ],
@@ -65,6 +71,12 @@
             "name": "host-sys",
             "hostPath": {
               "path": "/sys"
+            }
+          },
+          {
+            "name": "host-os-release",
+            "hostPath": {
+              "path": "/etc/os-release"
             }
           }
         ]
