Install local-hooks into the NFD docker image
Install local feature detector hooks into the Docker image so that they
are automatically enabled, when building a custom image.

Change the NFD containers to run in privileged mode – this is required
in order for the cpu hook to be able to read MSRs. Also, add volume
mount in the NFD deployment templates to mount /dev/cpu inside the
container.

--- a/node-feature-discovery-daemonset.yaml.template
+++ b/node-feature-discovery-daemonset.yaml.template
@@ -21,6 +21,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: spec.nodeName
+          securityContext:
+            privileged: true
           image: quay.io/kubernetes_incubator/node-feature-discovery:v0.3.0
           name: node-feature-discovery
           args:
@@ -28,6 +30,9 @@ spec:
           volumeMounts:
             - name: host-boot
               mountPath: "/host-boot"
+            - name: host-devcpu
+              mountPath: "/dev/cpu"
+              readOnly: true
               readOnly: true
             - name: host-os-release
               mountPath: "/host-etc/os-release"
@@ -38,6 +43,9 @@ spec:
         - name: host-boot
           hostPath:
             path: "/boot"
+        - name: host-devcpu
+          hostPath:
+            path: "/dev/cpu"
         - name: host-os-release
           hostPath:
             path: "/etc/os-release"
