Configure pci feature source
Configure the pci feature source to include all PCI ID fields in the
name of the published node labels. This is done by directly editing the
example conf (which gets deployed inside the container image that is
built). This is handy when using custom images, although the preferred
way would be to use ConfigMap and VolumeMount.

--- a/local-hooks/node-feature-discovery-daemonset-initcontainer.yaml
+++ b/local-hooks/node-feature-discovery-daemonset-initcontainer.yaml
@@ -1,3 +1,20 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app: node-feature-discovery
+  name: nfd-config
+data:
+  node-feature-discovery.conf: |
+    sources:
+      pci:
+        deviceLabelFields:
+          - "class"
+          - "vendor"
+          - "device"
+          - "subsystem_vendor"
+          - "subsystem_device"
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -49,6 +66,8 @@ spec:
         - name: nfd-hooks
           mountPath: "/etc/kubernetes/node-feature-discovery/source.d"
           readOnly: true
+        - name: nfd-config
+          mountPath: "/etc/kubernetes/node-feature-discovery/"
       volumes:
       - name: host-boot
         hostPath:
@@ -64,3 +83,6 @@ spec:
           path: "/etc/os-release"
       - name: nfd-hooks
         emptyDir: {}
+      - name: nfd-config
+        configMap:
+          name: nfd-config
