--- a/node-feature-discovery.conf.example
+++ b/node-feature-discovery.conf.example
@@ -1,18 +1,18 @@
-#sources:
+sources:
 #  kernel:
 #    kconfigFile: "/path/to/kconfig"
 #    configOpts:
 #      - "NO_HZ"
 #      - "X86"
 #      - "DMI"
-#  pci:
+  pci:
 #    deviceClassWhitelist:
 #      - "0200"
 #      - "03"
 #      - "12"
-#    deviceLabelFields:
-#      - "class"
-#      - "vendor"
-#      - "device"
-#      - "subsystem_vendor"
-#      - "subsystem_device"
+    deviceLabelFields:
+      - "class"
+      - "vendor"
+      - "device"
+      - "subsystem_vendor"
+      - "subsystem_device"
