nfd-worker: add core.forceLabelInterval config option
Specifies an interval after which a labeling request +is sent to master
even if there have been no changes is feature labels.

--- a/deployment/node-feature-discovery/values.yaml
+++ b/deployment/node-feature-discovery/values.yaml
@@ -76,6 +76,7 @@ worker:
     #  labelWhiteList:
     #  noPublish: false
     #  sleepInterval: 60s
+    #  forceLabelInterval: 24h
     #  sources: [all]
     #  klog:
     #    addDirHeader: false
