--- a/nfd-worker.conf.example
+++ b/nfd-worker.conf.example
@@ -2,6 +2,7 @@
 #  labelWhiteList:
 #  noPublish: false
 #  sleepInterval: 60s
+#  forceLabelInterval: 24h
 #  sources: [all]
 #  klog:
 #    addDirHeader: false
