--- a/nfd-daemonset-combined.yaml.template
+++ b/nfd-daemonset-combined.yaml.template
@@ -155,6 +155,7 @@ data:
     #  labelWhiteList:
     #  noPublish: false
     #  sleepInterval: 60s
+    #  forceLabelInterval: 24h
     #  sources: [all]
     #  klog:
     #    addDirHeader: false
