--- a/nfd-worker-job.yaml.template
+++ b/nfd-worker-job.yaml.template
@@ -127,6 +127,7 @@ data:
     #  labelWhiteList:
     #  noPublish: false
     #  sleepInterval: 60s
+    #  forceLabelInterval: 24h
     #  sources: [all]
     #  klog:
     #    addDirHeader: false
