--- a/deployment/components/worker-config/nfd-worker.conf.example
+++ b/deployment/components/worker-config/nfd-worker.conf.example
@@ -185,6 +185,11 @@
 #                vendor: {op: In, value: ["8086"]}
 #                class: {op: In, value: ["02"]}
 #
+#    - name: my-avx-feature
+#      matchAny:
+#        - cpu.cpuid:
+#            '*': {op: InRegexp, value: ["^AVX512"]}
+#
 #    # The following features demonstreate label templating capabilities
 #    - name: "my-template-test"
 #      labelsTemplate: |
@@ -208,3 +213,11 @@
 #        - feature: cpu.cpuid
 #          matchExpressions:
 #            AVX: {op: Exists}
+#
+#    - name: "my-wildcard-template-test"
+#      labelsTemplate: |
+#        {{ range .kernel.config }}my-kconfig.{{ .Name }}={{ .Value }}
+#        {{ end }}
+#      matchAny:
+#        - kernel.config:
+#            '*': {op: In, value: ["SWAP", "X86", "AARCH64"]}
