--- a/deployment/helm/node-feature-discovery/values.yaml
+++ b/deployment/helm/node-feature-discovery/values.yaml
@@ -272,6 +272,11 @@ worker:
     #                vendor: {op: In, value: ["8086"]}
     #                class: {op: In, value: ["02"]}
     #
+    #    - name: my-avx-feature
+    #      matchAny:
+    #        - cpu.cpuid:
+    #            '*': {op: InRegexp, value: ["^AVX512"]}
+    #
     #    # The following features demonstreate label templating capabilities
     #    - name: "my-template-test"
     #      labelsTemplate: |
@@ -295,6 +300,14 @@ worker:
     #        - feature: cpu.cpuid
     #          matchExpressions:
     #            AVX: {op: Exists}
+    #
+    #    - name: "my-wildcard-template-test"
+    #      labelsTemplate: |
+    #        {{ range .kernel.config }}my-kconfig.{{ .Name }}={{ .Value }}
+    #        {{ end }}
+    #      matchAny:
+    #        - kernel.config:
+    #            '*': {op: In, value: ["SWAP", "X86", "AARCH64"]}
 ### <NFD-WORKER-CONF-END-DO-NOT-REMOVE>
 
   podSecurityContext: {}
