nfd-master: implement controller for labelrule CRs
Implement a simple controller stub that operates on LabelRule CRs. The
controller does not yet have any functionality other than logging
changes in the CR it is watching.

--- a/deployment/base/rbac/master-clusterrole.yaml
+++ b/deployment/base/rbac/master-clusterrole.yaml
@@ -20,3 +20,11 @@ rules:
   - create
   - get
   - update
+- apiGroups:
+  - nfd.k8s-sigs.io
+  resources:
+  - labelrules
+  verbs:
+  - get
+  - list
+  - watch
