pkg/apis/nfd: add variables to rule spec and support backreferences
Support backreferencing of output values from previous rules. Enables
complex setups where custom features are further combined together to
form even more sophisticated higher level labels. The labels created by
preceding rules are available as a special 'rule.matched' feature in
matchAny and matchAll directives. If referencing rules accross multiple
configs/CRDs care must be taken with the ordering.

Processing order of rules in nfd-worker:
1. Static rules
2. Files from /etc/kubernetes/node-feature-discovery/custom.d/
   in alphabetical order. Subdirectories are processed by reading their
   files in alphabetical order.
3. Custom rules from main nfd-worker.conf

In nfd-master the CRs are processed in alphabetical order (based on
their metadata.name).

This patch also adds new 'vars' and 'varsTemplate' fields to the
rulespec. These are treated similarly to 'labels' and 'labelsTemplate'
except that no labels are generated for them - the values are only added
for backreferencing into the 'rules.matched' feature. This may by
desired in schemes where the output of certain rules is only used as
intermediate variables for other rules and no labels out of these are
wanted.

An example setup:

  - name: "kernel feature"
    labels:
      kernel-feature:
    matchFeatures:
      - feature: kernel.version
        matchExpressions:
          major: {op: Gt, value: ["4"]}

  - name: "intermediate var feature"
    vars:
      nolabel-feature: "true"
    matchFeatures:
      - feature: cpu.cpuid
        matchExpressions:
          AVX512F: {op: Exists}
      - feature: pci.device
        matchExpressions:
          vendor: {op: In, value: ["8086"]}
          device: {op: In, value: ["1234", "1235"]}

  - name: top-level-feature
    matchFeatures:
      - feature: rule.matched
        matchExpressions:
          kernel-feature: "true"
          nolabel-feature: "true"

--- a/deployment/components/worker-config/nfd-worker.conf.example
+++ b/deployment/components/worker-config/nfd-worker.conf.example
@@ -190,6 +190,18 @@
 #        - cpu.cpuid:
 #            '*': {op: InRegexp, value: ["^AVX512"]}
 #
+#    # The following examples demonstrate the noLabel field and back-referencing
+#    - name: "my.dummy.feature"
+#      matchAll:
+#        - cpu.cpuid:
+#      noLabel: true
+#
+#    - name: "my.combo.feature"
+#      matchAll:
+#        - rule.matched:
+#            my.ng.feature: {op: IsTrue}
+#            my.dummy.feature: {op: Istrue}
+#
 #    # The following features demonstreate label templating capabilities
 #    - name: "my-template-test"
 #      labelsTemplate: |
