--- a/deployment/base/crd/cr-sample.yaml
+++ b/deployment/base/crd/cr-sample.yaml
@@ -78,6 +78,18 @@ spec:
             matchExpressions:
               '*': {op: InRegexp, value: ["^AVX512"]}
 
+    # The following examples demonstrate the noLabel field and back-referencing
+    - name: "my.dummy.feature"
+      matchAll:
+        - cpu.cpuid:
+      noLabel: true
+
+    - name: "my.combo.feature"
+      matchAll:
+        - rule.matched:
+            my.ng.feature: {op: IsTrue}
+            my.dummy.feature: {op: Istrue}
+
     # The following features demonstreate label templating capabilities
     - name: "my system template feature"
       labelsTemplate: |
