nfd-worker: add core.rawFeatureSources config option
Add a configuration option for controlling the enabled raw feature
sources. This is useful e.g. in testing and also allows fully shutting
down discovery of features that are not needed in a deployment.
Supplements core.sources which controls the enabled label sources.

--- a/deployment/components/worker-config/nfd-worker.conf.example
+++ b/deployment/components/worker-config/nfd-worker.conf.example
@@ -3,6 +3,7 @@
 #  noPublish: false
 #  sleepInterval: 60s
 #  sources: [all]
+#  rawFeatureSources: [all]
 #  klog:
 #    addDirHeader: false
 #    alsologtostderr: false
