--- a/deployment/helm/node-feature-discovery/values.yaml
+++ b/deployment/helm/node-feature-discovery/values.yaml
@@ -90,6 +90,7 @@ worker:
     #  noPublish: false
     #  sleepInterval: 60s
     #  sources: [all]
+    #  rawFeatureSources: [all]
     #  klog:
     #    addDirHeader: false
     #    alsologtostderr: false
