--- a/deployment/helm/node-feature-discovery/templates/clusterrole.yaml
+++ b/deployment/helm/node-feature-discovery/templates/clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "node-feature-discovery.fullname" . }}
+  name: {{ include "node-feature-discovery.fullname" . }}-master
   labels:
     {{- include "node-feature-discovery.labels" . | nindent 4 }}
 rules:
