--- a/deployment/helm/node-feature-discovery/templates/clusterrolebinding.yaml
+++ b/deployment/helm/node-feature-discovery/templates/clusterrolebinding.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "node-feature-discovery.fullname" . }}
+  name: {{ include "node-feature-discovery.fullname" . }}-master
   labels:
     {{- include "node-feature-discovery.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "node-feature-discovery.fullname" . }}
+  name: {{ include "node-feature-discovery.fullname" . }}-master
 subjects:
 - kind: ServiceAccount
   name: {{ include "node-feature-discovery.master.serviceAccountName" . }}
