--- a/crd/labelrule_sample.yaml
+++ b/crd/labelrule_sample.yaml
@@ -2,11 +2,14 @@ apiVersion: nfd.kubernetes.test/v1alpha1
 kind: LabelRule
 metadata:
   name: my-rule
+  namespace: node-feature-discovery
 spec:
   rules:
-    - name: my-custom-crd-label
-      matchOn:
-        - cpu:
-            cpuid:
-              AVX:
-                op: Exists
+  #
+  # A dummy example profile that is supposed to match virtually any Intel-based system
+  #
+  - name: profile.node.kubernetes.io/my-custom-crd-label
+    matchAll:
+    # Check that at least one PCI device with Intel as a vendor is present
+    - pci.device:
+        "vendor": { op: In, value: ["8086"] }
